--- a/index.html
+++ b/index.html
@@ -28,7 +28,24 @@
     </header>
     <main>
         <div id="title">Title Here</div>
-        <div id="dishes"></div>
+        <div id="dishes">
+            <div class="dishContainer" style="
+                    background: linear-gradient(to bottom,
+                        rgba(20, 20, 20, 0.125) 40%,
+                        rgba(20, 20, 20, 0.625));
+                    background-size: cover;
+                    background-position: center center;
+                " loading="lazy">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>Ejemplo de nombre de plato</td>
+                            <td><button>00.00</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </main>
     <section style="display: none;">
         <div id="shower">
