--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     <main>
         <div id="title">Title Here</div>
         <div id="dishes">
-            <div class="dishContainer" style="
+            <div class="dishContainer skeleton" style="
                     background: linear-gradient(to bottom,
                         rgba(20, 20, 20, 0.125) 40%,
                         rgba(20, 20, 20, 0.625));
                     background-size: cover;
-                    background-position: center center;
+                    background-position: center center; width: 200px;height: 100px; padding-top: 40px;
                 " loading="lazy">
-                <table>
+                <center>Loadin img</center>
+<!--
+ <table>
                     <tbody>
                         <tr>
                             <td>Ejemplo de nombre de plato</td>
@@ -44,6 +46,9 @@
                         </tr>
                     </tbody>
                 </table>
+-->
+               
+
             </div>
         </div>
     </main>
