--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     </header>
     <main>
         <div id="title">Title Here</div>
+
         <div id="dishes">
-            <div class="dishContainer skeleton" style="
+            <div class="dishContainer placeholder-item skeleton" style="
                     background: linear-gradient(to bottom,
                         rgba(20, 20, 20, 0.125) 40%,
                         rgba(20, 20, 20, 0.625));
@@ -37,8 +38,8 @@
                     background-position: center center; width: 200px;height: 100px; padding-top: 40px;
                 " loading="lazy">
                 <center>Loadin img</center>
-<!--
- <table>
+                <!--
+                <table>
                     <tbody>
                         <tr>
                             <td>Ejemplo de nombre de plato</td>
@@ -46,11 +47,12 @@
                         </tr>
                     </tbody>
                 </table>
--->
-               
+            -->
+
 
             </div>
         </div>
+
     </main>
     <section style="display: none;">
         <div id="shower">
