--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
     <script src="assets/js/setConfig.js"></script>
     <script src="assets/js/setMenu.js"></script>
+    <script src="assets/js/dishShower.js"></script>
     <script type="module" src="assets/js/firestore.js"></script>
 </body>
 
