--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         </ul>
     </footer>
 
-    <script src="assets/js/setConfig.js"></script>
-    <script src="assets/js/setMenu.js"></script>
-    <script src="assets/js/dishShower.js"></script>
+    <script type="text/javascript" src="assets/js/setConfig.js"></script>
+    <script type="text/javascript" src="assets/js/setMenu.js"></script>
+    <script type="text/javascript" src="assets/js/dishShower.js"></script>
     <script type="module" src="assets/js/firestore.js"></script>
 </body>
 
