--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <button id="min">-</button>
                                 <input type="number" id="quantity" min="0" value="0" max="0">
                                 <button id="max">+</button>
-                                <button id="max5">+5</button>
+                                <button id="maximun" value="0">max</button>
                             </div>
                         </td>
                         <td>
